namespace Battleship.Ammo;

public interface IShoot
{
    public List<Position> Shoot(Position origin);
}
