namespace Battleship;

public enum PegType
{
    HIT,
    MISS
}
