namespace Battleship;

public enum ShipType
{
    DESTROYER = 2,
    SUBMARINE = 3,
    CRUISER = 3,
    BATTLESHIP = 4,
    CARRIER = 5
}
