namespace Battleship;

public enum ShootMode
{
    SINGLE_FIRE,
    MISSILE_BARRAGE,
    NUCLEAR_BOMB
}
