namespace Battleship;

public interface IPosition
{
    public int X {get; set;}
    public int Y {get; set;}
}
